<resources>
    <string name="app_name">Legado</string>
    <string name="app_name_a">Legado·A</string>
    <string name="receiving_shared_label">Legado·search</string>
    <string name="tip_perm_request_storage">Legado needs storage access to find and read books. please go "App Settings" to allow "Storage permission".</string>
    <string name="menu_backup">Home</string>
    <string name="menu_restore">Restore</string>
    <string name="menu_import_old">Import Legado data</string>
    <string name="webdav_cache_backup">Offline cache book backup</string>
    <string name="webdav_cache_backup_s">Export to local and back up to the exports directory under the legado folder</string>
    <string name="backup_path">Backup to</string>
    <string name="select_backup_path">Please select a backup path.</string>
    <string name="menu_import_old_version">Import legacy data</string>
    <string name="menu_import_github">Import github data</string>
    <string name="menu_replace_rule">Replacement</string>
    <string name="menu_send">Send</string>
    <string name="dialog_title">Prompt</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_confirm">Confirm</string>
    <string name="dialog_setting">Go to Settings</string>
    <string name="tip_cannot_jump_setting_page">Cannot jump to Settings.</string>
    <string name="manual_input">Manual Input</string>
    <string name="enter_directory_path">Enter directory path</string>
    <string name="invalid_directory">Invalid directory path</string>
    <string name="empty_directory_input">Directory path cannot be empty</string>
    <string name="dynamic_click_retry">Retry</string>
    <string name="dynamic_loading">Loading</string>
    <string name="draw">Warning</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="delete_select_group">Delete Select Group</string>
    <string name="delete_all">Delete all</string>
    <string name="custom_export_section">Custom export chapter of epub</string>
    <string name="replace">Replace</string>
    <string name="replace_purify">Replacement</string>
    <string name="replace_purify_desc">Configure replacement rules</string>
    <string name="not_available">Not available now</string>
    <string name="enable">Enable</string>
    <string name="replace_purify_search">Search Replacement</string>
    <string name="bookshelf">Bookshelf</string>
    <string name="favorites">Favorites</string>
    <string name="favorite">Favorite</string>
    <string name="in_favorites">in Favorites</string>
    <string name="out_favorites">Not in Favorites</string>
    <string name="rss">RSS feeds</string>
    <string name="all">All</string>
    <string name="recent_reading">Recent reading</string>
    <string name="last_read">Last reading</string>
    <string name="update_log">What\'s new</string>
    <string name="bookshelf_empty">The bookshelf is still empty. Search for books or add them from discovery!</string>
    <string name="action_search">Search</string>
    <string name="action_download">Download</string>
    <string name="layout_list">List</string>
    <string name="layout_grid3">Grid-3</string>
    <string name="layout_grid4">Grid-4</string>
    <string name="layout_grid5">Grid-5</string>
    <string name="layout_grid6">Grid-6</string>
    <string name="bookshelf_layout">Layout</string>
    <string name="view">View</string>
    <string name="book_library">Library</string>
    <string name="book_local">Import books</string>
    <string name="book_source">Book sources</string>
    <string name="book_source_manage">Sources management</string>
    <string name="book_source_manage_desc">Create/Import/Edit/Manage Book sources</string>
    <string name="setting">Settings</string>
    <string name="theme_setting">Theme settings</string>
    <string name="theme_setting_s">Some settings related to interface or color</string>
    <string name="other_setting">Other settings</string>
    <string name="other_setting_s">Language • Other Settings</string>
    <string name="about">About</string>
    <string name="donate">Donations</string>
    <string name="exit">Exit</string>
    <string name="exit_no_save">It has not been saved. Do you want to continue editing?</string>
    <string name="read_style">Book styles</string>
    <string name="version">Version</string>
    <string name="local">Local</string>
    <string name="search">Search</string>
    <string name="origin_format">Origin: %s</string>
    <string name="read_dur_progress">Origin: %s</string>
    <string name="book_name">Title</string>
    <string name="lasted_show">Latest: %s</string>
    <string name="check_add_bookshelf">Would you like to add %s to your Bookshelf?</string>
    <string name="import_books_count">%s text file(s) in total</string>
    <string name="is_loading">Loading…</string>
    <string name="retry">Retry</string>
    <string name="web_service">Web service</string>
    <string name="web_service_desc">Web edit source and read book</string>
    <string name="web_edit_source">Edit book sources on the web</string>
    <string name="offline_cache">Offline cache</string>
    <string name="offline_cache_t">Offline cache</string>
    <string name="offline_cache_s">cache the selected chapter(s) to Storage</string>
    <string name="change_origin">Change Origin</string>
    <string name="about_description">
        \u3000\u3000 This is an open source reading software newly developed by Kotlin, welcome to join us.
    </string>
    <string name="app_share_description">
        Legado (YueDu 3.0) download link：\n https://github.com/gedoor/legado/releases
    </string>
    <string name="version_name">Version %s</string>
    <string name="pt_background_verification">Background-verification</string>
    <string name="ps_background_verification">you can operate freely when verifying the book source</string>
    <string name="pt_auto_refresh">Auto-refresh</string>
    <string name="ps_auto_refresh">Update books automatically when opening the software</string>
    <string name="pt_auto_download">Auto-download</string>
    <string name="ps_auto_download">Download the latest chapters automatically  when updating books</string>
    <string name="backup_restore">Backup and restore</string>
    <string name="web_dav_set">WebDav settings</string>
    <string name="web_dav_set_import_old">WebDav settings • Import legacy data</string>
    <string name="backup">Backup</string>
    <string name="restore">Restore</string>
    <string name="backup_permission">Backup needs storage permission</string>
    <string name="restore_permission">Restore needs storage permission</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="backup_confirmation">Backup confirmation</string>
    <string name="backup_message">The new backup files will replace the original.\n Backup folder: YueDu</string>
    <string name="restore_confirmation">Restore confirmation</string>
    <string name="restore_message">Restoring the bookshelf data will overwrite the current Bookshelf.</string>
    <string name="backup_success">Backup succeed</string>
    <string name="backup_fail">Backup failed\n%s</string>
    <string name="on_restore">Restoring</string>
    <string name="restore_success">Restore succeed</string>
    <string name="restore_fail">Backup failed</string>
    <string name="screen_direction">Screen orientation</string>
    <string name="screen_sensor">Auto(sensor)</string>
    <string name="screen_landscape">Landscape</string>
    <string name="screen_portrait">Portrait</string>
    <string name="screen_unspecified">Follow system</string>
    <string name="disclaimer">Disclaimer</string>
    <string name="all_chapter_num">%d chapters</string>
    <string name="interface_setting">Interface</string>
    <string name="brightness">Brightness</string>
    <string name="chapter_list">Chapters</string>
    <string name="next_chapter">Next</string>
    <string name="previous_chapter">Prior</string>
    <string name="pt_hide_status_bar">Hide status bar</string>
    <string name="ps_hide_status_bar">Hide system navigation bar when reading</string>
    <string name="read_aloud">Speech</string>
    <string name="read_aloud_t">Speaking</string>
    <string name="read_aloud_s">Click to open the Reading</string>
    <string name="audio_play">Play</string>
    <string name="audio_play_t">Playing</string>
    <string name="audio_play_s">Click to open the Playing</string>
    <string name="audio_pause">Pause</string>
    <string name="text_return">Back</string>
    <string name="refresh">Refresh</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="pause">Pause</string>
    <string name="resume">Resume</string>
    <string name="set_timer">Timer</string>
    <string name="author">Author</string>
    <string name="replace_rule_edit">Edit replacement rule</string>
    <string name="replace_rule">Pattern</string>
    <string name="replace_to">Replacement</string>
    <string name="img_cover">Cover</string>
    <string name="replace_rule_summary">Rule name</string>
    <string name="select_all">Select all</string>
    <string name="change_icon">Change icon</string>
    <string name="book_intro">Book description</string>
    <string name="book_info_edit">Edit book information</string>
    <string name="replace_scope">Replacement object. Book name or source url is available</string>
    <string name="revert_selection">Inverse</string>
    <string name="cover_path">Cover path</string>
    <string name="theme">Theme</string>
    <string name="theme_mode">Theme mode</string>
    <string name="use_regex">Using Regex</string>
    <string name="change_icon_summary">Switch the software icon displayed on the desktop</string>
    <string name="help">Help</string>
    <string name="group">Group</string>
    <string name="refresh_cover">Refresh cover</string>
    <string name="change_cover_source">Change origin</string>
    <string name="select_local_image">Local image</string>
    <string name="book_type">Type:</string>
    <string name="more_menu">More menu</string>
    <string name="day">Day</string>
    <string name="night">Night</string>
    <string name="save_theme_config">Save theme config</string>
    <string name="save_day_theme_summary">Save day theme config</string>
    <string name="save_night_theme_summary">Save night theme config</string>
    <string name="theme_list">Theme list</string>
    <string name="theme_list_summary">Save, Import, Share theme</string>
    <string name="pre_download">Download in advance</string>
    <string name="background_image">Background image</string>
    <string name="cover_config">cover config</string>
    <string name="cover_config_summary">Generic Cover Rules and Default Cover Style</string>
    <string name="font_scale">font scale</string>
    <string name="font_scale_summary">font scale:%.1f</string>
    <string name="scope_title">Act on the title</string>
    <string name="scope_content">Act on the content</string>
    <string name="welcome_style">Launch interface style</string>
    <string name="welcome_style_summary">Startup screen image and whether to display text, etc.</string>
    <string name="timeout_millisecond">Timed out milliseconds</string>
    <string name="replace_exclude_scope">Exclude range, optional title or source URL</string>
    <string name="disable_manga_scale">Disable Manga Zoom</string>
    <string name="disable_manga_click_scroll">Disable Tap to Turn Page</string>
    <string name="enable_auto_scroll">Enable Auto Scroll</string>
    <string name="enable_manga_horizontal_scroll">Horizontal Scroll</string>
    <string name="manga_color_filter">Filter</string>
    <string name="hide_manga_title">Hide Manga List Titles</string>
    <string name="disable_horizontal_animation">Disable Horizontal Scroll Animation</string>
</resources>