<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <io.legato.kazusa.lib.prefs.PreferenceCategory
        android:key="themeCategory"
        android:title="@string/theme"
        app:allowDividerAbove="true"
        app:allowDividerBelow="false"
        app:iconSpaceReserved="false"
        app:layout="@layout/view_preference_category">

        <io.legato.kazusa.lib.prefs.ThemeModePreference
            android:defaultValue="0"
            android:entries="@array/theme_mode"
            android:entryValues="@array/theme_mode_v"
            android:key="themeMode"
            android:title="@string/theme_mode"
            android:summary="切换浅色/深色/跟随系统" />

        <io.legato.kazusa.lib.prefs.ThemeCardPreference
            android:key="app_theme"
            android:title="应用主题"
            android:summary="喵喵喵"
            android:entries="@array/themes_item"
            android:entryValues="@array/themes_value"
            android:defaultValue="0" />

        <io.legato.kazusa.lib.prefs.IconListPreference
            android:defaultValue="ic_launcher"
            android:entries="@array/icon_names"
            android:entryValues="@array/icons"
            android:key="launcherIcon"
            android:summary="@string/change_icon_summary"
            android:title="@string/change_icon"
            app:iconSpaceReserved="false"
            app:icons="@array/icons" />

        <io.legato.kazusa.lib.prefs.Preference
            android:key="welcomeStyle"
            android:title="@string/welcome_style"
            android:summary="@string/welcome_style_summary" />

        <io.legato.kazusa.lib.prefs.Preference
            android:key="fontScale"
            android:summary="@string/font_scale_summary"
            android:title="@string/font_scale"
            app:iconSpaceReserved="false" />

        <io.legato.kazusa.lib.prefs.Preference
            android:key="coverConfig"
            android:title="@string/cover_config"
            android:summary="@string/cover_config_summary"
            app:allowDividerAbove="false"
            app:allowDividerBelow="false"
            app:iconSpaceReserved="false" />

        <io.legato.kazusa.lib.prefs.Preference
            android:key="themeList"
            android:summary="@string/theme_list_summary"
            android:title="@string/theme_list"
            app:allowDividerAbove="false"
            app:allowDividerBelow="false"
            app:iconSpaceReserved="false" />

    </io.legato.kazusa.lib.prefs.PreferenceCategory>

    <io.legato.kazusa.lib.prefs.PreferenceCategory
        android:key="dayThemeCategory"
        android:title="@string/day"
        app:allowDividerAbove="true"
        app:allowDividerBelow="false"
        app:iconSpaceReserved="false"
        app:layout="@layout/view_preference_category">

        <io.legato.kazusa.lib.prefs.Preference
            android:key="backgroundImage"
            android:title="@string/background_image" />

        <io.legato.kazusa.lib.prefs.Preference
            android:key="saveDayTheme"
            android:summary="@string/save_day_theme_summary"
            android:title="@string/save_theme_config"
            app:allowDividerAbove="false"
            app:allowDividerBelow="false"
            app:iconSpaceReserved="false" />

    </io.legato.kazusa.lib.prefs.PreferenceCategory>

    <io.legato.kazusa.lib.prefs.PreferenceCategory
        android:key="nightThemeCategory"
        android:title="@string/night"
        app:allowDividerAbove="true"
        app:allowDividerBelow="false"
        app:iconSpaceReserved="false"
        app:layout="@layout/view_preference_category">

        <io.legato.kazusa.lib.prefs.Preference
            android:key="backgroundImageNight"
            android:title="@string/background_image" />

        <io.legato.kazusa.lib.prefs.Preference
            android:key="saveNightTheme"
            android:summary="@string/save_night_theme_summary"
            android:title="@string/save_theme_config"
            app:allowDividerAbove="false"
            app:allowDividerBelow="false"
            app:iconSpaceReserved="false" />

    </io.legato.kazusa.lib.prefs.PreferenceCategory>

</androidx.preference.PreferenceScreen>