<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.main.MainActivity"
    tools:ignore="AlwaysShowAction">

    <group android:id="@+id/menu_group_on_line">
        <item
            android:id="@+id/menu_change_source"
            android:icon="@drawable/ic_exchange"
            android:title="@string/change_origin"
            app:showAsAction="always" />

        <item
            android:id="@+id/menu_refresh"
            android:icon="@drawable/ic_refresh"
            android:title="@string/refresh"
            app:showAsAction="always" />

    </group>

    <item
        android:id="@+id/menu_pre_manga_number"
        android:title="@string/pre_download"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_disable_manga_scale"
        android:checkable="true"
        android:checked="false"
        android:title="@string/disable_manga_scale"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_disable_click_scroll"
        android:checkable="true"
        android:checked="false"
        android:title="@string/disable_manga_click_scroll"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_enable_auto_scroll"
        android:checkable="true"
        android:checked="false"
        android:title="@string/enable_auto_scroll"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_enable_horizontal_scroll"
        android:checkable="true"
        android:checked="false"
        android:title="@string/enable_manga_horizontal_scroll"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_disable_horizontal_animation"
        android:checkable="true"
        android:checked="false"
        android:title="@string/disable_horizontal_animation"
        android:visible="false"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_manga_color_filter"
        android:title="@string/manga_color_filter"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_hide_manga_title"
        android:checkable="true"
        android:checked="false"
        android:title="@string/hide_manga_title"
        app:showAsAction="never" />

</menu>
