<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_vertical"
    android:orientation="horizontal"
    android:paddingHorizontal="8dp"
    android:paddingVertical="8dp"
    tools:ignore="RtlHardcoded">

    <io.legato.kazusa.lib.theme.view.ThemeCheckBox
        android:id="@+id/cb_selected_all"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/select_all" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_revert_selection"
        style="@style/Widget.Material3Expressive.Button.TonalButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="0dp"
        android:layout_marginEnd="8dp"
        android:text="@string/revert_selection" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_select_action_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Widget.Material3Expressive.Button"
        android:layout_marginEnd="8dp"
        android:text="@string/app_name"
        android:minWidth="0dp"
        android:visibility="visible" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_menu_more"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:padding="4dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/more_menu"
        android:src="@drawable/ic_more_vert"
        android:tooltipText="@string/more_menu"
        android:visibility="visible"
        tools:ignore="RtlHardcoded,UnusedAttribute" />

</LinearLayout>